--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+<link rel="stylesheet" href="../static/style.css">
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<head>
+    <meta charset="UTF-8">
+    <title>Chatbot</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    <!-- Include -->
+
+
+</head>
+<body>
+<div class="container">
+    <div class="chatbox">
+        <div class="chatbox__support">
+            <div class="chatbox__header">
+                <div class="chatbox__image--header">
+                    <img src="../static/images/icon.png" style="width: 60px; height:60px;" alt="image">
+                </div>
+                <div class="chatbox__content--header">
+                    <h4 class="chatbox__heading--header">Chat support</h4>
+                    <p class="chatbox__description--header">Hi. My name is Tensorbot. How can I help you?</p>
+                </div>
+            </div>
+            <div class="chatbox__messages">
+                <div></div>
+            </div>
+            <div class="chatbox__footer">
+                <input type="text" placeholder="Write a message...">
+                <button class="chatbox__send--footer send__button">Send</button>
+            </div>
+        </div>
+        <div class="chatbox__button">
+            <button><img src="../static/images/icon.png" style="width: 50px; height:50px;" /></button>
+        </div>
+    </div>
+</div>
+
+
+    <script src="../static/app.js"></script>
 
 </body>
 </html>
